--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "name": "wilbere/upload-files",
-    "description": "Paquete que me facilitará crear un CRUD y subir, descargar y eliminar archivos del servidor",
+    "description": "Paquete para facilitar crear un CRUD de archivos y imagenes en BD",
     "type": "library",
     "license": "MIT",
-    "version": "1.0.0",
+    "version": "0.2.0",
     "autoload": {
         "psr-4": {
             "Wilbere\\UploadFiles\\": "src/"
@@ -16,7 +16,7 @@
             "role": "Developer"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {},
     "require-dev": { 
         "orchestra/testbench": "9.0"
